# CivBot

./: .dockerignore  .gitignore  CivBot.py  Dockerfile  docker-compose.yml  perchance.py  pyproject.toml
.github/workflows/: deploy_bot.yml
cogs/: CivDiscord.py  ImageMeme.py  MiscUtilities.py  TextMeme.py  VoiceRelay.py
resources/TextMeme/: perchance.txt
