[project]
name = "civbot"
version = "0.1.0"
description = "A poorly written bot for civ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "configparser>=7.2.0",
    "discord>=2.3.2",
    "fuzzywuzzy>=0.18.0",
    "mcfetch>=2.1.3",
    "nbtlib>=2.0.4",
    "pillow>=12.0.0",
    "pycountry>=24.6.1",
    "python-levenshtein>=0.27.3",
]
